File structure improved

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <nav>
                 <ul id="menu__items">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="account.html">Account</a></li>
+                    <li><a href="store/products.html">Products</a></li>
+                    <li><a href="store/account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img alt="cart" height="30px" src="img/cart.png" width="30px "></a>
+            <a href="store/cart.html"><img alt="cart" height="30px" src="img/cart.png" width="30px "></a>
             <img alt="menu" class="menu-icon" onclick="menutoggle()" src="img/menu.png">
         </div>
         <div class="row">
@@ -68,8 +68,8 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
         <div class="col-4">
-            <a href="product-details.html"><img alt="puma t-shirt" src="img/product-1.jpg"></a>
-            <a href="product-details.html">
+            <a href="store/product-details.html"><img alt="puma t-shirt" src="img/product-1.jpg"></a>
+            <a href="store/product-details.html">
                 <p>Red Printed T-shirt</p>
             </a>
             <div class="rating">
