--- a/store/account.html
+++ b/store/account.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="All Products RedStore">
     <title>All Products RedStore</title>
-    <link href="css/index.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans&family=Mouse+Memoirs&family=Poppins:ital,wght@0,200;0,300;0,600;1,500;1,600;1,700&family=Roboto+Slab:wght@600&family=Roboto:wght@300&display=swap"
@@ -20,17 +20,17 @@
 <div class="container">
     <div class="navbar">
         <div class="navbar__logo">
-            <a href="index.html"><img alt="logo" src="img/logo.png"></a>
+            <a href="../index.html"><img alt="logo" src="../img/logo.png"></a>
         </div>
         <nav>
             <ul id="menu__items">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
-        <a href="cart.html"><img alt="cart" height="30px" src="img/cart.png" width="30px "></a>
-        <img alt="menu" class="menu-icon" onclick="menutoggle()" src="img/menu.png">
+        <a href="cart.html"><img alt="cart" height="30px" src="../img/cart.png" width="30px "></a>
+        <img alt="menu" class="menu-icon" onclick="menutoggle()" src="../img/menu.png">
     </div>
 
 </div>
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <img alt="footballers" src="img/image1.png">
+                <img alt="footballers" src="../img/image1.png">
             </div>
             <div class="col-2">
                 <div class="form-container">
@@ -76,12 +76,12 @@
                 <h3>Download Our App</h3>
                 <p>Download our app for Android and ios phone</p>
                 <div class="app-logo">
-                    <img alt="app-store" src="img/app-store.png">
-                    <img alt="play-store" src="img/play-store.png">
+                    <img alt="app-store" src="../img/app-store.png">
+                    <img alt="play-store" src="../img/play-store.png">
                 </div>
             </div>
             <div class="footer__col-2">
-                <img alt="RedStore logo white" src="img/logo-white.png">
+                <img alt="RedStore logo white" src="../img/logo-white.png">
                 <p>Our purpose is to Sustainably Make The Pleasure and benefits of sports Accessible to the Many</p>
             </div>
             <div class="footer__col-3">
@@ -108,7 +108,7 @@
     </div>
 </div>
 <!-- js -->
-<script src="js/main.js"></script>
+<script src="../js/main.js"></script>
 
 </body>
 
