--- a/store/product-details.html
+++ b/store/product-details.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta name="description" content="All Products RedStore" />
     <title>All Products RedStore</title>
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="../css/index.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,23 +24,23 @@
     <div class="container">
       <div class="navbar">
         <div class="navbar__logo">
-          <a href="index.html"><img alt="logo" src="img/logo.png" /></a>
+          <a href="../index.html"><img alt="logo" src="../img/logo.png" /></a>
         </div>
         <nav>
           <ul id="menu__items">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="account.html">Account</a></li>
           </ul>
         </nav>
         <a href="cart.html"
-          ><img alt="cart" height="30px" src="img/cart.png" width="30px "
+          ><img alt="cart" height="30px" src="../img/cart.png" width="30px "
         /></a>
         <img
           alt="menu"
           class="menu-icon"
           onclick="menutoggle()"
-          src="img/menu.png"
+          src="../img/menu.png"
         />
       </div>
     </div>
@@ -48,14 +48,14 @@
     <div class="small-container single-product">
       <div class="row">
         <div class="col-2">
-          <img alt="gallery-1" id="ProductImg" src="img/gallery-1.jpg" />
+          <img alt="gallery-1" id="ProductImg" src="../img/gallery-1.jpg" />
 
           <div class="small-img-row">
             <div class="small-img-col">
               <img
                 alt="gallery-1"
                 class="small-img"
-                src="img/gallery-1.jpg"
+                src="../img/gallery-1.jpg"
                 width="100%"
               />
             </div>
@@ -63,7 +63,7 @@
               <img
                 alt="gallery-2"
                 class="small-img"
-                src="img/gallery-2.jpg"
+                src="../img/gallery-2.jpg"
                 width="100%"
               />
             </div>
@@ -71,7 +71,7 @@
               <img
                 alt="gallery-3"
                 class="small-img"
-                src="img/gallery-3.jpg"
+                src="../img/gallery-3.jpg"
                 width="100%"
               />
             </div>
@@ -79,7 +79,7 @@
               <img
                 alt="gallery-4"
                 class="small-img"
-                src="img/gallery-4.jpg"
+                src="../img/gallery-4.jpg"
                 width="100%"
               />
             </div>
@@ -121,7 +121,7 @@
     <div class="small-container">
       <div class="row">
         <div class="col-4">
-          <img alt="product-1" src="img/product-1.jpg" />
+          <img alt="product-1" src="../img/product-1.jpg" />
           <p>Red Printed T-shirt</p>
           <div class="rating">
             <i class="fa fa-star"></i>
@@ -133,20 +133,7 @@
           <p>$50.00</p>
         </div>
         <div class="col-4">
-          <img alt="product-2" src="img/product-2.jpg" />
-          <p>Red Printed T-shirt</p>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-half-o"></i>
-            <i class="fa fa-star-o"></i>
-          </div>
-          <p>$50.00</p>
-        </div>
-
-        <div class="col-4">
-          <img alt="product-3" src="img/product-3.jpg" />
+          <img alt="product-2" src="../img/product-2.jpg" />
           <p>Red Printed T-shirt</p>
           <div class="rating">
             <i class="fa fa-star"></i>
@@ -159,7 +146,20 @@
         </div>
 
         <div class="col-4">
-          <img alt="product-4" src="img/product-4.jpg" />
+          <img alt="product-3" src="../img/product-3.jpg" />
+          <p>Red Printed T-shirt</p>
+          <div class="rating">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-o"></i>
+            <i class="fa fa-star-o"></i>
+          </div>
+          <p>$50.00</p>
+        </div>
+
+        <div class="col-4">
+          <img alt="product-4" src="../img/product-4.jpg" />
           <p>Red Printed T-shirt</p>
           <div class="rating">
             <i class="fa fa-star"></i>
@@ -181,12 +181,12 @@
             <h3>Download Our App</h3>
             <p>Download our app for Android and ios phone</p>
             <div class="app-logo">
-              <img alt="app-store" src="img/app-store.png" />
-              <img alt="play-store" src="img/play-store.png" />
+              <img alt="app-store" src="../img/app-store.png" />
+              <img alt="play-store" src="../img/play-store.png" />
             </div>
           </div>
           <div class="footer__col-2">
-            <img alt="RedStore logo white" src="img/logo-white.png" />
+            <img alt="RedStore logo white" src="../img/logo-white.png" />
             <p>
               Our purpose is to Sustainably Make The Pleasure and benefits of
               sports Accessible to the Many
@@ -216,6 +216,6 @@
       </div>
     </div>
     <!-- js -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
