--- a/store/products.html
+++ b/store/products.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="All Products RedStore">
     <title>All Products RedStore</title>
-    <link href="css/index.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans&family=Mouse+Memoirs&family=Poppins:ital,wght@0,200;0,300;0,600;1,500;1,600;1,700&family=Roboto+Slab:wght@600&family=Roboto:wght@300&display=swap"
@@ -20,17 +20,17 @@
 <div class="container">
     <div class="navbar">
         <div class="navbar__logo">
-            <a href="index.html"><img alt="logo" src="img/logo.png"></a>
+            <a href="../index.html"><img alt="logo" src="../img/logo.png"></a>
         </div>
         <nav>
             <ul id="menu__items">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
-        <a href="cart.html"><img alt="cart" height="30px" src="img/cart.png" width="30px "></a>
-        <img alt="menu" class="menu-icon" onclick="menutoggle()" src="img/menu.png">
+        <a href="cart.html"><img alt="cart" height="30px" src="../img/cart.png" width="30px "></a>
+        <img alt="menu" class="menu-icon" onclick="menutoggle()" src="../img/menu.png">
     </div>
 
 </div>
@@ -50,7 +50,7 @@
 
     <div class="row">
         <div class="col-4">
-            <a href="product-details.html"><img alt="product-1" src="img/product-1.jpg"></a>
+            <a href="product-details.html"><img alt="product-1" src="../img/product-1.jpg"></a>
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -63,21 +63,7 @@
             <p>$50.00</p>
         </div>
         <div class="col-4">
-            <img alt="product-2" src="img/product-2.jpg">
-            <p>Red Printed T-shirt</p>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-half-o"></i>
-                <i class="fa fa-star-o"></i>
-
-            </div>
-            <p>$50.00</p>
-        </div>
-
-        <div class="col-4">
-            <img alt="product-3" src="img/product-3.jpg">
+            <img alt="product-2" src="../img/product-2.jpg">
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -91,33 +77,7 @@
         </div>
 
         <div class="col-4">
-            <img alt="product-4" src="img/product-4.jpg">
-            <p>Red Printed T-shirt</p>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img alt="product-5" src="img/product-5.jpg">
-            <p>Red Printed T-shirt</p>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img alt="product-6" src="img/product-6.jpg">
+            <img alt="product-3" src="../img/product-3.jpg">
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -131,7 +91,33 @@
         </div>
 
         <div class="col-4">
-            <img alt="product-7" src="img/product-7.jpg">
+            <img alt="product-4" src="../img/product-4.jpg">
+            <p>Red Printed T-shirt</p>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img alt="product-5" src="../img/product-5.jpg">
+            <p>Red Printed T-shirt</p>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img alt="product-6" src="../img/product-6.jpg">
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -145,33 +131,7 @@
         </div>
 
         <div class="col-4">
-            <img alt="product-8" src="img/product-8.jpg">
-            <p>Red Printed T-shirt</p>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img alt="product-9" src="img/product-9.jpg">
-            <p>Red Printed T-shirt</p>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img alt="product-10" src="img/product-10.jpg">
+            <img alt="product-7" src="../img/product-7.jpg">
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -185,7 +145,33 @@
         </div>
 
         <div class="col-4">
-            <img alt="product-11" src="img/product-11.jpg">
+            <img alt="product-8" src="../img/product-8.jpg">
+            <p>Red Printed T-shirt</p>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img alt="product-9" src="../img/product-9.jpg">
+            <p>Red Printed T-shirt</p>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img alt="product-10" src="../img/product-10.jpg">
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -199,7 +185,21 @@
         </div>
 
         <div class="col-4">
-            <img alt="product-12" src="img/product-12.jpg">
+            <img alt="product-11" src="../img/product-11.jpg">
+            <p>Red Printed T-shirt</p>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+                <i class="fa fa-star-o"></i>
+
+            </div>
+            <p>$50.00</p>
+        </div>
+
+        <div class="col-4">
+            <img alt="product-12" src="../img/product-12.jpg">
             <p>Red Printed T-shirt</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -232,12 +232,12 @@
                 <h3>Download Our App</h3>
                 <p>Download our app for Android and ios phone</p>
                 <div class="app-logo">
-                    <img alt="app-store" src="img/app-store.png">
-                    <img alt="play-store" src="img/play-store.png">
+                    <img alt="app-store" src="../img/app-store.png">
+                    <img alt="play-store" src="../img/play-store.png">
                 </div>
             </div>
             <div class="footer__col-2">
-                <img alt="RedStore logo white" src="img/logo-white.png">
+                <img alt="RedStore logo white" src="../img/logo-white.png">
                 <p>Our purpose is to Sustainably Make The Pleasure and benefits of sports Accessible to the Many</p>
             </div>
             <div class="footer__col-3">
@@ -264,7 +264,7 @@
     </div>
 </div>
 <!-- js -->
-<script src="js/main.js"></script>
+<script src="../js/main.js"></script>
 </body>
 
 </html>
