producr detail page added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span  aria-label="brand specifier and product description" class="card__brand">Lady skirt</span>
                     <div class="payment">
                         <span class="payment__detail">$60</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
 
@@ -72,7 +72,7 @@
                     <span  aria-label="brand specifier and product description" class="card__brand">Man/Women Sweater</span>
                     <div class="payment">
                         <span class="payment__detail">$40</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
                 <article class="product__card">
@@ -81,7 +81,7 @@
                     <span  aria-label="brand specifier and product description" class="card__brand">Lady short skirt</span>
                     <div class="payment">
                         <span class="payment__detail">$30</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
                 <article class="product__card">
@@ -90,7 +90,7 @@
                     <span  aria-label="brand specifier and product description" class="card__brand">Man trouser</span>
                     <div class="payment">
                         <span class="payment__detail">$70</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
                 <article class="product__card">
@@ -99,7 +99,7 @@
                     <span aria-label="brand specifier and product description" class="card__brand">Lady Sweater</span>
                     <div class="payment">
                         <span class="payment__detail">$50</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
                 <article class="product__card">
@@ -108,7 +108,7 @@
                     <span  aria-label="brand specifier and product description" class="card__brand">Lady Pants</span>
                     <div class="payment">
                         <span class="payment__detail">$60</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
                 <article class="product__card">
@@ -117,7 +117,7 @@
                     <span  aria-label="brand specifier and product description" class="card__brand">Lady long skirt</span>
                     <div class="payment">
                         <span class="payment__detail">$21</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
                 <article class="product__card">
@@ -126,7 +126,7 @@
                     <span aria-label="brand specifier and product description" class="card__brand">Men sweater</span>
                     <div class="payment">
                         <span class="payment__detail">$33</span>
-                        <button class="btn btn-price">Buy</button>
+                        <button class="btn btn-price"><a  href="./productDetail.html">Buy</a></button>
                     </div>
                 </article>
             </div>
