--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
             <li class="account__list"><a href="./fashion.html" class="account__link">Fashion</a></li>
             <li class="account__list"><a href="./register.html" class="account__link">Register</a></li>
             <li class="account__list"><a href="./login.html" class="account__link"><i class="fa-solid fa-right-to-bracket"></i>  Login</a></li>
-            <li class="account__list"><a href="./fashion.html" class="account__link"><i class="fa-solid fa-cart-shopping"></i>  Cart</a></li>
+            <li class="account__list"><a href="./shoppingcart.html" class="account__link"><i class="fa-solid fa-cart-shopping"></i>  Cart</a></li>
            
         </ul>
         <div class="account-bar">
