--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -63,5 +63,38 @@
             </div>
         </div>
     </main>
+    <footer class="closing">
+        <div class="closing__knowus">
+            <h2 class="closing__title">Get to know Us</h2>
+            <ul>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">About B-shops</a></li>
+                <li><a href="#">B-shop Blogs</a></li>
+            </ul>
+        </div>
+        <div class="closing__makemoney">
+            <h2 class="closing__title">Make money with us</h2>
+            <ul>
+                <li><a href="#">Sell products on B-shops</a></li>
+                <li><a href="#">Advertise your products</a></li>
+                <li><a href="#">Become a Member</a></li>
+            </ul>
+        </div>
+        <div class="closing__social">
+            <h2 class="closing__title">About Us</h2>
+            <p class="social__description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Numquam fuga ad,sed placeat reprehenderit reiciendis dicta 
+                quis nesciunt pariatur natus?
+            </p>
+            <div class="social__media">
+                <span class="btn btn-social" role="button" aria-label="facebook"><i class="fa-brands fa-facebook social"></i></span>
+                <span class="btn btn-social" role="button" aria-label="messenger"><i class="fa-brands fa-facebook-messenger social"></i></span>
+                <span class="btn btn-social" role="button" aria-label="twitter"><i class="fa-brands fa-twitter social"></i></span>
+                <span class="btn btn-social" role="button" aria-label="instagram"><i class="fa-brands fa-square-instagram social"></i></span>
+            </div>
+        </div>
+        <span class="copy"> Copyright reserved &copy; 2023</span>
+    </footer>
 </body>
 </html>
