Ecommerce page done

--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
     <div class="container">
         <header class="header">
             <nav class="header__left">
-              <li class="item1 header__left">NEW ARRIVALS</li>
-              <li class="item2 header__left">SHOP <i class="fa-solid fa-angle-down"></i></li>
-              <li class="item3 header__left">ABOUT</li>
-              <li class="item4 header__left">BLOG</li>
+              <a href="#">NEW ARRIVALS</a>
+              <a href="#">SHOP <i class="fa-solid fa-angle-down"></i></a>
+              <a href="#">ABOUT</a>
+              <a href="#">BLOG</a>
             </nav>
             <nav class="header__right">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-sharp fa-solid fa-bag-shopping"></i>
             </nav>
+        </header>
 
-          </header>
-      
-          <main>
-            <marquee style="z-index: 10;"> Free deliver </marquee>
-               <div class="banner">
-                <span class="badge">SHOP NOW > </span>
-                    <h2>CELEBRATE YOUR LOVE FOR BEAUTY</h2>
-                    <p>
-                        Happy New Year and it may bring you good health, <br/>
-                        appiness, and fortune.
-                    </p>
-               </div>
-          </main>
+
+        <main>
+            <h1>hello</h1>
+            <div class="banner">
+                <span class="badge">
+                    SHOP NOW >
+                </span>
+                <h2>CELEBRATE YOUR LOVE FOR BEAUTY</h2>
+                <p>
+                    Happy New Year and it may bring you good health, <br/>
+                    appiness, and fortune.
+                </p>
+            </div>
+        </main>
 
         <section id="shirt">
             <h1>FEATURED COLLECTION</h1>
