fixed some changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://kit.fontawesome.com/7ffcbc5775.css"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>ECOMMERCE</title>
   </head>
@@ -54,7 +59,7 @@
         ></a>
       </div>
       <div class="down-arrow">
-        <a href="#trending" class="down"
+        <a href="#cart" class="down"
           ><i class="bx bx-down-arrow-alt"></i
         ></a>
       </div>
@@ -65,7 +70,27 @@
       </div>
       <div class="products">
         <div class="row">
-          <img src="images/tshirt.jpg" alt="cart-image" />
+          <img src="images/nike1.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/shoes1.jpg" alt="cart-image" />
           <div class="product-text">
             <h5>DEAL</h5>
           </div>
@@ -185,7 +210,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="images/tshirt.jpg" alt="cart-image" />
+          <img src="images/leatherjacket.jpg" alt="cart-image" />
           <div class="product-text">
             <h5>DEAL</h5>
           </div>
@@ -282,16 +307,16 @@
           <p>Bikinis</p>
           <p>Backpacks</p>
         </div>
-        <div class="help">
-          <h3>Help</h3>
-          <p>Help center</p>
-          <p>Terms & conditions</p>
-          <p>Returns</p>
-          <p>Delivery</p>
-          <p>Payment</p>
+        <div class="social-icon">
+          <h3 class="icon-text">PAYMENTS METHODS</h3>
+          <a href="#"><i class="bx bxl-paypal"></i></a>
+          <a href="#"><i class="fa-brands fa-cc-amex"></i></a>
+          <a href="#"><i class="bx bxl-mastercard"></i></a>
+          <a href="#"><i class="fa-brands fa-cc-visa"></i></a>
+          <a href="#"><i class="fa-brands fa-cc-mastercard"></i></a>
         </div>
         <div class="social-icon">
-          <h3>FOLLOW US</h3>
+          <h3 class="icon-text">FOLLOW US</h3>
           <a href="#"><i class="bx bxl-facebook-circle"></i></a>
           <a href="#"><i class="bx bxl-instagram"></i></a>
           <a href="#"><i class="bx bxl-reddit"></i></a>
@@ -303,5 +328,7 @@
     <div class="copyright">
       <p>© STORE AB 2023</p>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
