--- a/index.html
+++ b/index.html
@@ -177,55 +177,54 @@
             <article class="warming grid-main">
                 <h3>Separate</h3>
                 <div class="warming__card">
-                    <img src="/src/images/men-pajamas.webp" alt="Men's Pajamas">
+                    <!-- <img src="" alt=""> -->
                     <div class="warming__card-description flex-main">
-                        <h4>Mens Striped pajamas</h4>
-                        <p>These microfleece pajamas provide comfort and warmth during the cold winter nights.</p>
-                        <h5>Price: €22.99 &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href="https://www.atlasformen.nl/products/heren/homewear/pyjamas/lange-pyjamas/gestreepte-microfleece-pyjama-cosy/k9147.aspx?utm_source=google&utm_medium=cpc&utm_campaign=PM-AFM-NL-PMax"><i class="fa-solid fa-cart-shopping"></i></a></h5>
+                        <h4>To be added soon</h4>
+                        <!-- <p></p> -->
+                        <!-- <h5>Price: € &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href=""><i class="fa-solid fa-cart-shopping"></i></a></h5> -->
                     </div>
                 </div>
                 <div class="warming__card">
-                    <img src="/src/images/women-pajamas.webp" alt="Women's Pajamas">
+                    <!-- <img src="" alt=""> -->
                     <div class="warming__card-description flex-main">
-                        <h4>Women's Pajamas Set</h4>
-                        <p>Plus Size Cat Fashion Comfortable Soft Home Polyester Warm Gift.</p>
-                        <h5>Price: €36.99 &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href="https://www.lightinthebox.com/ar/p/women-s-plus-size-pajamas-sets-animal-cat-fashion-comfort-soft-home-christmas-carnival-polyester-warm-gift-crew-neck-long-sleeve-hoodie-pant-winter_p9370201.html?prm=1.3.0.1"><i class="fa-solid fa-cart-shopping"></i></a></h5>
+                        <h4>To be added soon</h4>
+                        <!-- <p></p> -->
+                        <!-- <h5>Price: € &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href=""><i class="fa-solid fa-cart-shopping"></i></a></h5> -->
                     </div>
                 </div>
                 <div class="warming__card">
-                    <img src="/src/images/kids-pajamas.jpg" alt="Kid's Pajamas">
+                    <!-- <img src="" alt=""> -->
                     <div class="warming__card-description flex-main">
-                        <h4>Kids Pajamas 13-14 years</h4>
-                        <p>Boys pajamas from the brand Mango Kids. The top has long sleeves and a checkered pattern.
-                        </p>
-                        <h5>Price: €25.99 &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href="https://www.wehkamp.nl/mango-kids-geruite-pyjama-wijnrood-grijs-17020934/?MaatCode=164&utm_source=google&utm_medium=cpc&utm_campaign=KidsFashion&utm_term=170209341640"><i class="fa-solid fa-cart-shopping"></i></a></h5>
+                        <h4>To be added soon</h4>
+                        <!-- <p></p> -->
+                        <!-- <h5>Price: € &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href=""><i class="fa-solid fa-cart-shopping"></i></a></h5> -->
                     </div>
                 </div>
             </article>
             <article class="warming grid-main">
                 <h3>Built In</h3>
                 <div class="warming__card">
-                    <img src="/src/images/men-jacket.webp" alt="Men's winter jacket">
+                    <!-- <img src="" alt=""> -->
                     <div class="warming__card-description flex-main">
-                        <h4>Jacket Leaf Khaki</h4>
-                        <p>The versatile travel jacket is engineered with graphene, to take on colder climates.</p>
-                        <h5>Price: €199 &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href="https://shop.tropicfeel.com/products/ns60-vest-leaf-khaki?variant=40340898611283&gclid=CjwKCAiAoL6eBhA3EiwAXDom5mKZykmqWYbzs4DnhO0Msd-VN2yict0DQ1yb0ocxF_vsdFgcbvrwDhoCpGcQAvD_BwE"><i class="fa-solid fa-cart-shopping"></i></a></h5>
+                        <h4>To be added soon</h4>
+                        <!-- <p></p> -->
+                        <!-- <h5>Price: € &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href=""><i class="fa-solid fa-cart-shopping"></i></a></h5> -->
                     </div>
                 </div>
                 <div class="warming__card">
-                    <img src="/src/images/women-jacket.webp" alt="Women's winter jacket">
+                    <!-- <img src="" alt=""> -->
                     <div class="warming__card-description flex-main">
-                        <h4>Women's Winter Jacket</h4>
-                        <p>Puffer Jacket Winter Coat Comfort Street Loose Daily Casual</p>
-                        <h5>Price: €52.99 &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href="https://www.lightinthebox.com/ar/p/women-s-puffer-jacket-comtemporary-stylish-casual-street-style-zipper-pocket-street-casual-daily-casual-daily-coat-cotton-long-green-fall-winter_p9329138.html?category_id=4713&prm=1.2.1.4"><i class="fa-solid fa-cart-shopping"></i></a></h5>
+                        <h4>To be added soon</h4>
+                        <!-- <p></p> -->
+                        <!-- <h5>Price: € &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href=""><i class="fa-solid fa-cart-shopping"></i></a></h5> -->
                     </div>
                 </div>
                 <div class="warming__card">
-                    <img src="/src/images/kids-jacket.webp" alt="Kids's winter jacket">
+                    <!-- <img src="" alt=""> -->
                     <div class="warming__card-description flex-main">
-                        <h4>Jacket with teddy interior</h4>
-                        <p>Puffer jacket in quilted technical fabric. Ultra-light, with "Duck Free" padding, best for winter.</p>
-                        <h5>Price: €34.97 &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href="https://nl.benetton.com/jacket-with-teddy-interior-2WU0GN00Q_0U1_82.html?gclid=CjwKCAiAoL6eBhA3EiwAXDom5kgn3_Yp3afVWaTPdNigXq1cganeCQ6WmSXLMLOWDax2xKmASJmY6hoC4zMQAvD_BwE&gclsrc=aw.ds&utm_campaign=NL_LF_PERF-MAX_ALL_SALES_AO_CONVERSION_ALL-PRODUCT&utm_medium=performancemax&utm_source=google"><i class="fa-solid fa-cart-shopping"></i></a></h5>
+                        <h4>To be added soon</h4>
+                        <!-- <p></p> -->
+                        <!-- <h5>Price: € &nbsp;Click to buy <a  aria-label="shopping cart" target="_blank" href=""><i class="fa-solid fa-cart-shopping"></i></a></h5> -->
                     </div>
                 </div>
             </article>
