--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <li><a href="https://scents.netlify.app/">Home</a></li>
         <li><a href="/index.html/#banner-section">About Us</a></li>
         <li><a href="/store/productdetails.html">Products</a></li>
-        <svg class="cart__icon" viewBox="0 0 24 24">
+        <li><svg class="cart__icon" viewBox="0 0 24 24">
           <path
             fill="currentColor"
             d="M12,13A5,5 0 0,1 7,8H9A3,3 0 0,0 12,11A3,3 0 0,0 15,8H17A5,5 0 0,1 12,13M12,3A3,3 0 0,1 15,6H9A3,3 0 0,1 12,3M19,6H17A5,5 0 0,0 12,1A5,5 0 0,0 7,6H5C3.89,6 3,6.89 3,8V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V8C21,6.89 20.1,6 19,6Z"
           />
-        </svg>
+        </svg></li>
       </ul>
 
      
@@ -50,7 +50,7 @@
         <article class="product">
           <a href="/store/productdetails.html">
             <img src="/assets/product1.png" alt="Product 1" />
-            <h3>Product 1</h3>
+            <h2>Product 1</h2>
             <div class="price">$19.99</div>
             <button>Add to Cart</button>
           </a>
@@ -58,7 +58,7 @@
         <article class="product">
           <a href="/store/productdetails.html">
             <img src="/assets/product2.png" alt="Product 2" />
-            <h3>Product 2</h3>
+            <h2>Product 2</h2>
             <div class="price">$19.99</div>
             <button>Add to Cart</button>
           </a>
@@ -66,7 +66,7 @@
         <article class="product">
           <a href="/store/productdetails.html">
             <img src="/assets/product3.png" alt="Product 3" />
-            <h3>Product 3</h3>
+            <h2>Product 3</h2>
             <div class="price">$19.99</div>
             <button>Add to Cart</button>
           </a>
@@ -74,7 +74,7 @@
         <article class="product">
           <a href="/store/productdetails.html">
             <img src="/assets/product4.png" alt="Product 4" />
-            <h3>Product 4</h3>
+            <h2>Product 4</h2>
             <div class="price">$19.99</div>
             <button>Add to Cart</button>
           </a>
@@ -82,7 +82,7 @@
         <article class="product">
           <a href="/store/productdetails.html">
             <img src="/assets/product5.png" alt="Product 5" />
-            <h3>Product 5</h3>
+            <h2>Product 5</h2>
             <div class="price">$19.99</div>
             <button>Add to Cart</button>
           </a>
@@ -90,7 +90,7 @@
         <article class="product">
           <a href="/store/productdetails.html">
             <img src="/assets/product6.png" alt="Product 6" />
-            <h3>Product 6</h3>
+            <h2>Product 6</h2>
             <div class="price">$19.99</div>
             <button>Add to Cart</button>
           </a>
