--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             <i class="fa-solid fa-magnifying-glass"></i>
             <a href="/cart.html" aria-label="shopping cart"><i class="fa-solid fa-cart-shopping"></i></a>
             <a href="/registration.html">SignUp</a>
-            <a id="login" href="#">LogIn</a>
+            <a id="login-icon" href="#">LogIn</a>
         </div>
     </nav>
 
     <div class="landing">
-        <div id="log-in" class="flex-main">
+        <div id="login" class="flex-main hidden">
             <input type="text" placeholder="User Name" required>
             <input type="password" placeholder="Password" required>
-            <button id="enter">Enter</button>
+            <button id="login-enter">Enter</button>
         </div>
         <h1>Energy costs. Shop with us</h2>
         <p>The best winter products</p>
