accessible from all devices

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </span>
                 <h2>CELEBRATE YOUR LOVE FOR BEAUTY</h2>
                 <p>
-                    Happy New Year and it may bring you good health, <br/>
-                    appiness, and fortune.
+                    Happy New Year and it may bring you good health, appiness, <br/>
+                    and fortune.
                 </p>
             </div>
         </main>
@@ -286,7 +286,7 @@
                 <p>Powered by fashion</p>
             </div>
             <div class="cards">
-
+                
             </div>
           </footer>
         </header>
