changes made in nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <i class="fa-solid fa-volleyball icon-ball"></i>
     <nav class="menu">
         <ul class="menu__lists">
-            <li class="menu__list"><a href="" class="menu__link">Home</a></li>
-            <li class="menu__list"><a href=".products" class="menu__link">Products</a></li>
-            <li class="menu__list"><a href="#review section" class="menu__link">Review</a></li>
+            <li class="menu__list"><a href="#" class="menu__link">Home</a></li>
+            <li class="menu__list"><a href="#products" class="menu__link">Products</a></li>
+            <li class="menu__list"><a href="#review-section" class="menu__link">Review</a></li>
             <li class="menu__list"><a href="#contact-section" class="menu__link">Contact us</a></li>
         </ul>
     </nav>
