product page reponsive

--- a/product.html
+++ b/product.html
@@ -53,53 +53,53 @@
         <div class="item__list ">
             <article class="product__article">
             <span class="sale__badge">30%</span>
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
             <span class="sale__badge">30%</span>
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
             <span class="sale__badge">30%</span>
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         <article class="product__article">
-          <img src="product img.jpg" alt="this is a picture of shoes" />
+          <img src="/img/product img.jpg" alt="this is a picture of shoes" />
           <button aria-label="this button is to select the product">Buy</button>
         </article>
         </div>
