added link to logo

--- a/html/cart.html
+++ b/html/cart.html
@@ -25,14 +25,19 @@
 <body>
     <div class="page-wrapper">
         <header>
-            <img src="../images/Icon Logo-06.png" alt="Shop's logo" class="header__logo">
-            <img src="../images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text">
+            <img src="../images/Icon Logo-06.png" alt="Shop's logo" class="header__logo" onclick="goHome()">
+            <img src="../images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text" onclick="goHome()">
             <div class="header__cart">
                 <a href="../html/cart.html" id="cart-link">
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
                     <div id="cart-counter">2</div>
                 </a>
             </div>
+            <script>
+                function goHome(){
+                    window.open("../index.html", "_self");
+                }
+            </script>
         </header>
         <nav>
             <ul>
